# rabbit-Hunter-5.0-

./: .gitignore  Makefile  README.md  Rabbit_Hunter_V5.1_架构设计稿.docx  pyproject.toml
baselines/: features_v0.1.3.json  v0.1.10.json  v0.1.3.json
configs/: default.yaml
configs/.history/: manifest.jsonl
configs/strategies/: mean_reversion.yaml  ml_scoring.yaml  price_action.yaml  trend_following.yaml
docker/: Dockerfile  docker-compose.yml
docs/: DELIVERY_SUMMARY.md  SHADOW_VALIDATION_PROTOCOL.md  TRADE_REVIEW_v0.1g.md
docs/experiments/: 2026-07-08-kronos-mini-evaluation.md  2026-07-08-pa-features-ml-ab.md  2026-07-08-pullback-playbook-event-study.md
models/: retrain_log.jsonl
models/ml_model_v20260706-095743/: README.md  model.pkl  training_result.json
models/ml_model_v20260706-103050/: README.md  model.pkl  training_result.json
models/ml_model_v20260706-103831/: README.md  model.pkl  training_result.json
models/ml_model_v20260706-103857/: README.md  model.pkl  training_result.json
models/ml_model_v20260706-144507/: README.md  model.pkl  training_result.json
rabbit_hunter/: cli.py
rabbit_hunter/ai_review/: __init__.py  agent.py
rabbit_hunter/analytics/: baseline.py  cluster_performance.py  clustering.py  drift.py  feature_stability.py
rabbit_hunter/backtest/: __init__.py  compare.py  engine.py  ledger.py  report.py
rabbit_hunter/config/: __init__.py  history.py  loader.py  schema.py
rabbit_hunter/data_engine/: __init__.py  binance_funding.py  health.py  okx_fetcher.py  quality.py  retry.py  storage.py
rabbit_hunter/exchanges/: base.py  binance.py  okx.py
rabbit_hunter/execution_engine/: __init__.py  backtest_executor.py  base.py  live_executor.py  paper_executor.py  reconciliation.py
rabbit_hunter/feature_engine/: __init__.py  (+4 more)
tests/: test_cli.py  test_smoke.py
(+99 files in other folders)
