[project]
name = "rabbit-hunter"
version = "0.1a0"
description = "Rule-based crypto perpetual quant engine (Phase 1a)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "pandas-ta-classic>=0.5",
    "ccxt>=4.2",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "typer>=0.12",
    "matplotlib>=3.8",
    "jinja2>=3.1",
    "scipy>=1.12",
    "numpy>=1.26,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1"]

[project.scripts]
rabbit = "rabbit_hunter.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rabbit_hunter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
