[project]
name = "rabbit-hunter"
version = "0.1a0"
description = "Rule-based crypto perpetual quant engine (Phase 1a)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.2",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "pandas-ta-classic>=0.5",
    "ccxt>=4.2",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "typer>=0.12",
    "matplotlib>=3.9",
    "jinja2>=3.1",
    "scipy>=1.13",
    "numpy>=2.0",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "httpx>=0.27"]

[project.scripts]
rabbit = "rabbit_hunter.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rabbit_hunter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
